--- a/src/main/resources/templates/performanceEvaluation/performanceEvaluations-detail.html
+++ b/src/main/resources/templates/performanceEvaluation/performanceEvaluations-detail.html
@@ -12,7 +12,7 @@
   <div class="row text-center " >
     <!--View list Button-->
     <div class="col" >
-      <a class="btn btn-primary" href="/performanceEvaluation" >
+      <a class="btn btn-primary" href="/performanceEvaluationRequest" >
         <i class="fa fa-list" style="font-size: 20px" ></i >&nbsp;&nbsp;View List
       </a >
     </div >
