PerformanceEvaluationRequest was completed

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -37,7 +37,7 @@
   <div id="accordianId6" role="tablist" aria-multiselectable="true" >
     <div class="card" >
       <div class="card-header" role="tab" id="section1HeaderId6" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId6" href="#section1ContentId6" aria-expanded="true"
              aria-controls="section1ContentId6" >
             Employee Details
@@ -55,7 +55,7 @@
                     <label class="control-label" for="id" >ID :</label >
                   </div >
                   <div class="col-md-8" >
-                    <p id="id" data-th-text="${employeeDetail.id}" class="display_detail" ></p >
+                    <p class="display_detail" data-th-text="${employeeDetail.id}" ></p >
                   </div >
                 </div >
                 <div class="form-row text-right" >
@@ -262,7 +262,7 @@
     <!--Employee Institute Details-->
     <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeInstitutes)}" >
       <div class="card-header" role="tab" id="section1HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
              aria-controls="section1ContentId" >
             Employee Institute Details
@@ -298,7 +298,7 @@
     <!--Employee Leave-->
     <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeLeaves)}" >
       <div class="card-header" role="tab" id="section2HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
              aria-controls="section2ContentId" >
             Employee Leave
@@ -338,7 +338,7 @@
     <!--Qualification-->
     <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.qualifications)}" >
       <div class="card-header" role="tab" id="section3HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true"
              aria-controls="section3ContentId" >
             Qualification
@@ -372,7 +372,7 @@
     <!--Commendations-->
     <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.commendations)}" >
       <div class="card-header" role="tab" id="section4HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section4ContentId" aria-expanded="true"
              aria-controls="section4ContentId" >
             Commendations
@@ -406,7 +406,7 @@
     <!-- Censure-->
     <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.censures)}" >
       <div class="card-header" role="tab" id="section5HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section5ContentId" aria-expanded="true"
              aria-controls="section5ContentId" >
             Censure
@@ -441,9 +441,9 @@
       </div >
     </div >
     <!--performanceEvaluations-->
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluations)}" >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluationRequests)}" >
       <div class="card-header" role="tab" id="section6HeaderId" >
-        <h5 class="mb-0" >
+        <h5 class="mb-0 col-12 text-center" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section6ContentId" aria-expanded="true"
              aria-controls="section6ContentId" >
             Performance evaluations
@@ -454,14 +454,153 @@
         <div class="card-body" >
           <!--performance evaluations-->
           <div class="container-fluid"
-               data-th-each="performanceEvaluations : ${employeeDetail.performanceEvaluations}" >
-          <!--todo performanceEvaluations-->
+               data-th-each="performanceEvaluationRequest : ${employeeDetail.performanceEvaluationRequests}" >
+            <div class="container-fluid" >
+              <div class="form-row " >
+                <p class="display_detail text-center" > Agreed period of Appraisal (one calendar year) : From : <span
+                      data-th-text="${performanceEvaluationRequest.formDate}" ></span >
+                                                        to : <span
+                        data-th-text="${performanceEvaluationRequest.toDate}" ></span >
+                </p >
+              </div >
+              <!--Areas of Responsibility start-->
+              <div class="container-fluid" >
+                <p class="text-center h3" >Areas of Responsibility</p >
+              </div >
+              <!--task list -->
+              <div class="form-row " >
+                <div class="col-md-6" >
+                  <label class="control-label" data-th-for="${'taskLists'}" >Whether you have received a task list
+                                                                             :</label >
+                </div >
+                <div class="col-md-6 text-center" >
+                  <p class="display_detail"
+                     data-th-text="${#strings.equals(performanceEvaluationRequest.taskLists, 'Y')?'Yes':'No'}" ></p >
+                </div >
+              </div >
+              <!--responsibilities -->
+              <div class="form-row " >
+                <div class="col-md-4" >
+                  <label class="control-label" data-th-for="${'taskLists'}" >Main Areas of Responsibility and Tasks
+                                                                             :</label >
+                </div >
+                <div class="col-md-8" >
+                  <div class="form-row " >
+                    <div class="col-6" >
+                      <label class="control-label" >
+                        Responsibility</label >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.responsibility}" ></p >
+                    </div >
+                    <div class="col-6" >
+                      <label class="control-label" >
+                        Tasks</label >
+                      <p class="display_detail" data-th-utext="${performanceEvaluationRequest.tasks}" ></p >
+                    </div >
+                  </div >
+                </div >
+              </div >
+              <!--Areas of Responsibility end-->
+
+              <!--Mid Term Appraisal start-->
+              <div class="container-fluid" >
+                <p class="text-center h3" >Mid Term Appraisal</p >
+              </div >
+              <!--satisfied -->
+              <div class="form-row " >
+                <div class="col-md-4" >
+                  <label class="control-label" data-th-for="${'taskLists'}" >Are you satisfied about your
+                                                                             performance
+                                                                             :</label >
+                </div >
+                <div class="col-md-4 " >
+                  <p class="display_detail"
+                     data-th-text="${#strings.equals(performanceEvaluationRequest.satisfied, 'Y')?'Yes':'No'}" ></p >
+                </div >
+              </div >
+              <!--responsibilities -->
+              <div class="form-row " >
+                <div class="col-md-4" >
+                  <label class="control-label" > Any difficulties faced:</label >
+                </div >
+                <div class="col-md-4 " >
+                  <p class="display_detail"
+                     data-th-utext="${performanceEvaluationRequest.difficulties}" ></p >
+                </div >
+                <div class="form-row " >
+                  <label class="control-label" >
+                    Strategies for improvement (if Appraisee is lagging behind):</label >
+                </div >
+                <div class="col-md-4 " >
+                  <p class="display_detail"
+                     data-th-utext="${performanceEvaluationRequest.improvement}" ></p >
+                </div >
+              </div >
+            </div >
+            <!--Public Relations start-->
+            <div class="container-fluid" >
+              <p class="text-center h3" >Public Relations</p >
+            </div >
+            <!--task list -->
+            <div class="form-row " >
+              <div class="col-md-6" >
+                <label class="control-label" data-th-for="${'taskLists'}" >Whether your directly work with general
+                                                                           public
+                                                                           or other institutes or officers of
+                                                                           other
+                                                                           sections </label >
+              </div >
+              <div class="col-md-6 text-center" >
+                <p class="display_detail"
+                   data-th-text="${#strings.equals(performanceEvaluationRequest.publicInstitutesOfficers, 'Y')?'Yes':'No'}" ></p >
+              </div >
+            </div >
+            <!--satisfiedGeneralPublic -->
+            <div class="form-row " >
+              <div class="col-md-6" >
+                <label class="control-label" data-th-for="${'satisfiedGeneralPublic'}" >Are you satisfied about
+                                                                                        your
+                                                                                        work
+                                                                                        with the general public?
+                                                                                        :</label >
+              </div >
+              <div class="col-md-6 text-center" >
+                <p class="display_detail"
+                   data-th-text="${#strings.equals(performanceEvaluationRequest.satisfiedGeneralPublic, 'Y')?'Yes':'No'}" ></p >
+              </div >
+            </div >
+            <!--unhappy -->
+            <div class="form-row" >
+              <div class="col-md-6" >
+                <label class="control-label" data-th-for="${'unhappy'}" >Are there any general public or
+                                                                         other officers were unhappy
+                                                                         ?:</label >
+              </div >
+              <div class="col-md-6 text-center" >
+                <p class="display_detail"
+                   data-th-text="${#strings.equals(performanceEvaluationRequest.unhappy, 'Y')?'Yes':'No'}" ></p >
+              </div >
+
+            </div >
+            <!--reasons -->
+            <div class="form-row " >
+              <div class="col-md-6" >
+                <label class="control-label" data-th-for="${'reasons'}" >if the answer for 4.3 is yes what are the
+                                                                         reasons
+                                                                         for it?</label >
+              </div >
+              <div class="col-md-6 text-center" >
+                <p class="display_detail"
+                   data-th-utext="${performanceEvaluationRequest.reasons}" ></p >
+              </div >
+            </div >
+            <div class="container-fluid" data-th-if="${!#strings.equals(performanceEvaluationRequest.performanceEvaluationStatus, 'APRS')}">
+
+            </div>
           </div >
         </div >
       </div >
     </div >
   </div >
-
 </div >
 
 <!--Button-->
